...
        <View
          style={[styles.modalContent, { backgroundColor: colors.card }]}
          testID="currency-modal-content"
        >
          <View style={styles.header}>
            <CustomText variant="h4" fontWeight="bold" style={{ color: colors.text }}>
              Select Currency
            </CustomText>
            <TouchableOpacity onPress={handleClose} hitSlop={10} testID="currency-modal-close">
              <Ionicons name="close" size={Spacing.iconSize} color={colors.text} />
            </TouchableOpacity>
          </View>

...
            <TextInput
              value={searchTerm}
              onChangeText={setSearchTerm}
              placeholder="Search by country, code, or symbol"
              style={[styles.searchInput, { color: colors.text }]}
              placeholderTextColor={colors.gray[400]}
              testID="currency-modal-search-input"
            />
            {searchTerm ? (
              <TouchableOpacity
                onPress={() => setSearchTerm("")}
                style={styles.clearButton}
                hitSlop={{ top: 10, bottom: 10, left: 10, right: 10 }}
...
