...
            <Ionicons name="share-social-outline" size={Spacing.iconSize} color={Colors.primary} />
          </TouchableOpacity>
          <TouchableOpacity
            onPress={() => router.navigate("/settings")}
            activeOpacity={0.8}
            hitSlop={10}
            testID="home-settings-button"
          >
            <Ionicons name="settings-outline" size={Spacing.iconSize} color={Colors.primary} />
          </TouchableOpacity>
        </View>
      </View>
    </View>
...
