...
          borderColor: colors.gray[300],
          backgroundColor: colors.gray[100],
        },
      ]}
      onPress={onAddCurrency}
      activeOpacity={0.8}
      testID="add-currency-button"
    >
      <Ionicons name="add" size={16} color={Colors.primary} />
      <CustomText variant="h6" fontWeight="medium" style={{ color: Colors.primary }}>
        Add Currency ({selectedCodesLength}/{MAX_ROWS})
      </CustomText>
    </TouchableOpacity>
...
